--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 
 #banner img{
     display: block;
-    height: 180px; 
+    height: 150px; 
     margin: 20px 18% 0 18%;
     padding: 0px 0px 0px 0px;
     position: relative;
@@ -38,9 +38,9 @@ body{
 #banner h1{
     margin: 0px 0px;
     padding: 40px 0px 30px 45%;
-    font-size: 50px;
+    font-size: 40px;
     text-align: left;
-    font-family: Times New Roman;
+    font-family:sans-serif;
     color: white;
     line-height: 40px;
     float: left；
@@ -51,12 +51,20 @@ body{
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 45%;
     font-size: 18px;
-    font-family: Times New Roman;
+    font-family:sans-serif;
     color: white;
     text-align: left;
-
 }
 
+#banner h3{
+    height: auto;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 45%;
+    font-size: 18px;
+    font-family:inherit;
+    color: white;
+    text-align: left;
+}
 
 #globallink{
     height:50px;
@@ -87,7 +95,7 @@ body{
     color: aliceblue;
     font-size: 20px;
     border: 0px;
-    font-family: Times new Roman;
+    font-family: sans-serif;
     padding: 14px 0px 13px 0px;
     margin: 0px;
 }
@@ -126,7 +134,7 @@ body{
     width: 40%;
     height: auto;
     background-color:white; 
-    margin: 30px 5% 0px 5%;
+    margin: 60px 5% 0px 5%;
     padding: 0px 0px 0px 0px;
     float: left;
 }
@@ -138,7 +146,7 @@ body{
     padding: 0px 0px 0px 0px;
     font-size: 44px;
     text-align: left;
-    font-family: Times New Roman;
+    font-family: sans-serif;
     color: black;
     line-height: 40px;
 }
@@ -150,7 +158,7 @@ body{
     padding: 0px 0px 0px 0px;
     font-size: 22px;
     text-align: left;
-    font-family: Times New Roman;
+    font-family: sans-serif;
     color: black;
 }
 
@@ -161,11 +169,20 @@ body{
     padding: 0px 0px 0px 0px;
     font-size: 16px;
     text-align: left;
-    font-family: Times New Roman;
+    font-family: sans-serif;
     color: black;
 }
 
-
+#rightup h4{
+    width: auto;
+    height: auto;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+    font-size: 16px;
+    text-align: left;
+    font-family: sans-serif;
+    color: black;
+}
 
 #rightup a{
     display: block;
@@ -176,7 +193,7 @@ body{
     font-size: 26px;
     text-align: left;
     text-decoration: none;
-    font-family: Times New Roman;
+    font-family: sans-serif;
     color: black;
 }
 
@@ -205,7 +222,7 @@ body{
     padding: 0px 0px 0px 14%;
     font-size: 36px;
     text-align: left;
-    font-family: Times New Roman;
+    font-family: sans-serif;
     color: black;
     line-height: 40px;
 }
@@ -220,7 +237,7 @@ body{
     padding: 0px 0px 0px 0px;
     font-size: 20px;
     text-align: left;
-    font-family: Times New Roman;
+    font-family: sans-serif;
     color: black;
     //line-height: 4px;
 }
@@ -241,7 +258,7 @@ body{
     padding: 0px 0px 0px 5%;
     font-size: 36px;
     text-align: left;
-    font-family: Times New Roman;
+    font-family: sans-serif;
     color: black;
     line-height: 40px;
 }
@@ -257,7 +274,7 @@ body{
     padding: 0px 0px 0px 0px;
     font-size: 20px;
     text-align: left;
-    font-family: Times New Roman;
+    font-family: sans-serif;
     color: black;
     //line-height: 4px;
 }
